[package]
name = "fluent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fluent"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
cargo-php = "*"

[dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
fluent-syntax = "0.11.0"
lazy_static = "1.4.0"
fluent = "0.16.1"
ext-php-rs = {version = "0.12.0", features = ["anyhow"], git = 'https://github.com/davidcole1340/ext-php-rs', branch = 'master'}
intl-memoizer = "0.5.1"

[profile.release]
strip = "debuginfo"
