[package]
name = "fluent"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fluent"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
cargo-php = "*"

[dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
fluent-syntax = "0.12.0"
lazy_static = "1.5.0"
fluent = "0.17.0"
ext-php-rs = {version = "0.14.2", features = ["anyhow"]}
intl-memoizer = "0.5.3"

[profile.release]
strip = "debuginfo"
