[package]
name = "fluent"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fluent"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
fluent-syntax = "0.12.0"
fluent = "0.17.0"
ext-php-rs = {version = "0.15.15", features = ["anyhow"]}
intl-memoizer = "0.5.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.18"

[profile.release]
strip = "debuginfo"
